--- a/labs/1/index.html
+++ b/labs/1/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Fruits &amp; Bananas Corp</title>
-  <script src="Index.js" type="text/javascript" defer></script>
+  <script src="index.js" type="text/javascript" defer></script>
 </head>
 <body>
   <header>
